# cppquarium

./: .gitignore  CMakeLists.txt
src/: Aquarium.cpp  Aquarium.hpp  BaseComponent.cpp  BaseComponent.hpp  BaseSystem.cpp  BaseSystem.hpp  Entity.cpp  Entity.hpp  EntityComponentSystem.cpp  EntityComponentSystem.hpp  System.cpp  System.hpp  TickSystem.cpp  TickSystem.hpp  main.cpp
src/ecs/: Component.hpp  ComponentManager.hpp  ComponentManagerBase.cpp  ComponentManagerBase.hpp  CovariantComponentMap.cpp  CovariantComponentMap.hpp  Entity.cpp  Entity.hpp  EntityComponentSystem.cpp  EntityComponentSystem.hpp  Event.hpp  EventListenerManager.hpp  EventListenerManagerBase.cpp  EventListenerManagerBase.hpp  EventListenerManger.hpp  StaticMapHandler.hpp  System.cpp  System.hpp  SystemBase.cpp  SystemBase.hpp  pack.hpp  ptr.hpp
src/ecs/component/: Component.cpp  Component.hpp  ComponentManager.hpp  ComponentManagerBase.cpp  ComponentManagerBase.hpp
src/ecs/event/: EventListenerManager.hpp  EventListenerManagerBase.cpp  EventListenerManagerBase.hpp
src/ecs/system/: System.hpp  SystemBase.cpp  SystemBase.hpp
